--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -1,7 +1,15 @@
+dependencies:
+  - OpenZeppelin/openzeppelin-contracts@3.4.0
+compiler:
+  solc:
+    remappings:
+      - "@openzeppelin=OpenZeppelin/openzeppelin-contracts@3.4.0"
 dotenv: .env
 networks:
   default: development
   development:
+    verify: False
+  mumbai:
     verify: False
 wallets:
   from_key: ${PRIVATE_KEY}
